--- a/l4/LAB4.ioc
+++ b/l4/LAB4.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ARM.CMSIS.5.6.0.CMSISJjCORE=true
+ARM.CMSIS.5.6.0.CMSISJjCORE_Checked=true
+ARM.CMSIS.5.6.0.CMSISJjDSP=Library
+ARM.CMSIS.5.6.0.CMSISJjDSP_Checked=true
+ARM.CMSIS.5.6.0.IPParameters=CMSISJjDSP,CMSISJjCORE
+ARM.CMSIS.5.6.0_SwParameter=CMSISJjDSP\:Library;CMSISJjCORE\:true;
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -10,27 +16,33 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM3
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=TIM2
+Mcu.IP4=TIM3
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB3
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0
+Mcu.Pin17=VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=14
-Mcu.ThirdPartyNb=0
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=18
+Mcu.ThirdParty0=ARM.CMSIS.5.6.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.7.0
@@ -47,6 +59,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Signal=S_TIM2_CH2
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -124,7 +138,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -159,15 +173,28 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM2.Period=999
+TIM2.Prescaler=83
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IPParameters=Period,EncoderMode
-TIM3.Period=3071
+TIM3.Period=64511
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0.Mode=CMSISJjCORE
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0.Signal=ARM.CMSIS_VS_CMSISJjCORE_5.3.0_5.6.0
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0.Mode=CMSISJjDSP
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0.Signal=ARM.CMSIS_VS_CMSISJjDSP_1.7.0_5.6.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F411RE
